Complete the book rate method

--- a/BooksAndMovies.WebUI/Views/Book/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Book/Search.cshtml
@@ -3,7 +3,7 @@
 
 <h4>Book search page</h4>
 <form asp-action="SearchBook" method="post">
-    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the book name" />
+    <input type="search" class="form-control mb-2" name="query" id="query" placeholder="Enter the book name" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
