--- a/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
@@ -2,7 +2,7 @@
 
 <h4>Movie search page</h4>
 <form asp-action="SearchMovie" method="post">
-    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the movie name" />
+    <input type="search" class="form-control mb-2" name="query" id="query" placeholder="Enter the movie name" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
