--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
                                 {
                                     <li><a class="dropdown-item" asp-action="GetWishlist" asp-controller="Book"> Wishlist </a></li>
                                     <li><a class="dropdown-item" asp-action="GetFinishedlist" asp-controller="Book"> Finished </a></li>
+                                    <li><a class="dropdown-item" asp-action="Rate" asp-controller="Book" > Rate </a></li>
                                     <li><a class="dropdown-item" asp-action="GetFavouriteBooks" asp-controller="Book"> Favourites </a></li>
                                 }
 
