--- a/BooksAndMovies.WebUI/Views/User/Login.cshtml
+++ b/BooksAndMovies.WebUI/Views/User/Login.cshtml
@@ -1,6 +1,13 @@
 ﻿@model User
 
-
+@section Styles
+{
+    <style>
+        div.mb-3 > span {
+            color: red;
+        }
+    </style>
+}
 
 
 <h3>Login page</h3>
