--- a/BooksAndMovies.WebUI/Views/Shared/_BookListPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_BookListPartial.cshtml
@@ -32,7 +32,7 @@
                             else if (Model.BookListType == "Finishedlist")
                             {
                                 <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddBookToFavouritelist"> Add to favourites</button>
-
+                                <button type="submit" class="btn btn-success btn-sm mb-2" asp-action="RateBook"> Rate Book</button>
                             }
                             <button type="submit" class="btn btn-danger btn-sm mb-2" asp-action="@methodName">Remove from @Model.BookListType</button>
 
