--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -4,7 +4,7 @@
 
 
 <form asp-action="SearchTVShow" method="post">
-    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the tv show name" />
+    <input type="search" class="form-control mb-2" name="query" id="query" placeholder="Enter the tv show name" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
 
