--- a/BooksAndMovies.WebUI/wwwroot/css/site.css
+++ b/BooksAndMovies.WebUI/wwwroot/css/site.css
@@ -91,3 +91,10 @@ img {
 #movie img , #tvShow img {
     max-height:400px !important;
 }
+
+#totalItem {
+    color: chocolate;
+    font-size: 1.5rem;
+    text-align:center;
+    margin-bottom:1rem;
+}
