--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -15,9 +15,9 @@
 @if (Model != null)
 {
     <div class="row">
-        <strong>
-            Total tvshow count is "@Model.ToList().Count"
-        </strong>
+        
+        @await Html.PartialAsync("_TotalItemsCountPartial", new ItemCountModel { Count = Model.Where(x => x.PosterPath != null).ToList().Count, ItemName = "tvshow"})
+
         @foreach (var tvShow in Model)
         {
             if (tvShow.PosterPath != null)
