--- a/BooksAndMovies.WebUI/Views/Shared/_MovieInputsPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_MovieInputsPartial.cshtml
@@ -16,5 +16,5 @@
 
 
 <h4>@Model.Title </h4>
-<p>@Model.OriginalTitle</p>
+<p>@Model.ReleaseDate</p>
 <p><i class="fa fa-star" aria-hidden="true"></i> @Model.VoteAverage</p>
