--- a/BooksAndMovies.WebUI/Views/Shared/_TVShowInputsPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_TVShowInputsPartial.cshtml
@@ -16,5 +16,5 @@
 
 
 <h4>@Model.Name </h4>
-<p>@Model.OriginalName</p>
+<p>@(Model.FirstAirDate)</p>
 <p><i class="fa fa-star" aria-hidden="true"></i> @Model.VoteAverage</p>
