--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
     @await RenderSectionAsync(name: "Styles", required: false)
+
+    <style>
+        center a {
+            display:none;
+        }
+    </style>
 </head>
 <body>
 
@@ -71,7 +77,7 @@
                                 {
                                     <li><a class="dropdown-item" asp-action="GetWishlist" asp-controller="Book"> Wishlist </a></li>
                                     <li><a class="dropdown-item" asp-action="GetFinishedlist" asp-controller="Book"> Finished </a></li>
-                                    <li><a class="dropdown-item" asp-action="Rate" asp-controller="Book" > Rate </a></li>
+                                    <li><a class="dropdown-item" asp-action="Rate" asp-controller="Book"> Rate </a></li>
                                     <li><a class="dropdown-item" asp-action="GetFavouriteBooks" asp-controller="Book"> Favourites </a></li>
                                 }
 
@@ -119,7 +125,9 @@
             &copy; 2021 - BooksAndMovies
         </div>
     </footer>
+    
 
+   
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
