Change return view to return partialview in controllers

--- a/BooksAndMovies.WebUI/Views/Shared/_BookListPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_BookListPartial.cshtml
@@ -1,10 +1,9 @@
 ﻿@model BookViewModel
 
 @{
+    Layout = "_Layout.cshtml";
     string methodName = "RemoveBookFrom" + Model.BookListType;
 }
-
-
 
 
 <div class="row">
