--- a/BooksAndMovies.WebUI/Views/Home/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Home/Index.cshtml
@@ -1,59 +1,15 @@
-﻿@model MovieTVShowViewModel
+﻿
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
 
-<div class="row">
-    <h4 class="text-center">Popular Movies</h4>
+@await Component.InvokeAsync("Movies")
 
-    @foreach (var movie in Model.Movies)
-    {
-        if (movie.PosterPath != null)
-        {
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                <div id="movie">
-                    <form method="post">
-                        <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
-                        @await Html.PartialAsync("_MovieInputsPartial", movie)
 
-                        @if (Context.Session.GetString("email") != null)
-                        {
-                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist" asp-controller="Movie"> Add to watchedlist</button>
-                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList" asp-controller="Movie"> Add to wishlist </button>
-                        }
+@await Component.InvokeAsync("TVShows")
 
-                        <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="MovieDetail" asp-controller="Movie"><i class="fa fa-eye" aria-hidden="true"></i></button>
-                    </form>
-                </div>
-            </div>
-        }
-    }
-</div>
 
-<div class="row mt-3">
-    <h4 class="text-center">Popular TV Shows</h4>
 
-    @foreach (var tvShow in Model.TVShows)
-    {
-        if (tvShow.PosterPath != null)
-        {
-            <div class="col-md-3">
-                <div id="tvShow">
-                    <form method="post">
-                        <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
-                        @await Html.PartialAsync("_TVShowInputsPartial", tvShow)
 
-                        @if (Context.Session.GetString("email") != null)
-                        {
-                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWatchedlist" asp-controller="TVShow"> Add to watchedlist</button>
-                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWishList" asp-controller="TVShow"> Add to wishlist </button>
-                        }
-                        <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail" asp-controller="TVShow"><i class="fa fa-eye" aria-hidden="true"></i></button>
-                    </form>
-                </div>
-            </div>
-        }
-    }
-</div>
